--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.3",
+    "sonner": "^2.0.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
