--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.9",
     "date-fns": "^3.3.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
+    "jsbarcode": "^3.11.6",
     "lucide-react": "^0.344.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
+    "react-i18next": "^15.5.2",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.4",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
